<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Dog">

    <Button
        android:id="@+id/Feed"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="354dp"
        android:text="@string/Feed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="352dp"
        android:text="@string/Button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Play"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="354dp"
        android:text="@string/Play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Hunger"
        android:layout_width="120dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="248dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="188dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/TextView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Happy"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="117dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Happy"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rhungerTextView"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="245dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hungerresult"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rcleanTextView"
        android:layout_width="118dp"
        android:layout_height="42dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="180dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/cleanresult"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/rhappyTextView"
        android:layout_width="122dp"
        android:layout_height="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/happyresult"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="258dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog1__1_" />
</androidx.constraintlayout.widget.ConstraintLayout>